# crud_fastapi

./: README.md  criar_tabelas.py  docker-compose.yml  main.py  pyproject.toml
api/: api.py
api/v1/: api.py
api/v1/endpoints/: cursos.py
core/: configs.py  database.py  deps.py
models/: curso_model.py
schemas/: curso_schema.py
