[tool.poetry]
name = "crud_fastapi"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.40"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
